--- a/assets/styles.css
+++ b/assets/styles.css
@@ -227,11 +227,20 @@ main {
 
 p.lead{
   margin-top: 0;
+  line-height: 1.325;
 }
 }
 
 .lead {
   font-size: 1.375rem;
+  font-weight: 350;
+}
+
+.lead em{
+  font-family: 'Newsreader', Times New Roman, serif;
+  font-size: 1.75rem;
+  font-weight: 300;
+  font-style: italic;
 }
 
 h1 {
